<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            android:layout_gravity="start"/>

        <EditText
            android:id="@+id/etEventOrganizer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Organizer Name"
            android:inputType="text" />

        <EditText
            android:id="@+id/etEventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Event Title"
            android:inputType="text" />

        <EditText
            android:id="@+id/etEventLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Event Location"
            android:inputType="text" />

        <EditText
            android:id="@+id/etEventDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Event Description"
            android:inputType="textMultiLine"
            android:minLines="3" />

        <TextView
            android:id="@+id/tvSelectedDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSelectDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select Event start time" />


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/toggleAttendeeLimit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="Set Attendee Limit" />

        <EditText
            android:id="@+id/etAttendeeLimit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Attendee Limit" />


        <ImageView
            android:id="@+id/ivEventPoster"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop" />

        <Button
            android:id="@+id/btnUploadPoster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Upload Event Poster" />


        <Button
            android:id="@+id/btnReuseQR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Reuse QR Code" />

        <Button
            android:id="@+id/btnGenerateQRCodes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Generate QR Codes" />



    </LinearLayout>

</ScrollView>