...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168" />

    <Button
        android:id="@+id/attendeeButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="76dp"
        android:text="Attendee"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
...
